2007-07-10  Matthias Clasen  <mclasen@redhat.com>

	* glib/pltcheck.sh: Add g_once_init_enter to the whitelist of
	symbols allowed to have a local PLT entry, to fix 'make check'.

Tue Jul 10 12:24:35 2007  Tim Janik  <timj@imendio.com>

	* glib/gthread.[hc]: implemented g_once_init_enter(),
	g_once_init_enter_impl() and g_once_init_leave(), based on a patch by
	Antoine Tremblay, fixes #65041.
	adapted exported inline function mechanism from gutils.[hc] for inlining
	g_once_init_enter_impl() in gthread.[hc].

2007-07-09  Matthias Clasen  <mclasen@redhat.com>

	* NEWS: Updates

2007-07-09  Loïc Minier  <lool@dooz.org>

	* tests/refcount/closures.c: (main): Output newlines after thousand
	iterations of the inner-loop of the closures test; this helps having
	smaller lines and continuously outputting new lines.  (#447048).

2007-07-09  Ryan Lortie  <desrt@desrt.ca>

	* glib/gfileutils.c (write_to_temp_file): save errno to prevent it
	being clobbered by call to g_filename_display_name().  Bug #453796.

2007-07-09  Matthias Clasen  <mclasen@redhat.com>

	* m4macros/glib-gettext.m4: Fix a small problem with
	msgfmt -c detection.  (#341988, Laszlo Peter)

2007-07-07  Matthias Clasen  <mclasen@redhat.com>

	* glib/gmarkup.c (g_markup_parse_context_end_parse): Handle
	all states.  (#454473)

2007-07-06  Tor Lillqvist  <tml@novell.com>

	* glib/giowin32.c (g_io_win32_check): When WSAEnumNetworkEvents()
	signals FD_CONNECT that means that the connection attempt
	finished, either successfully or failed. Test explicitly whether
	the connnection succeeded and set either G_IO_OUT if it did,
	G_IO_ERR|G_IO_HUP if it failed.

	Make sure we never set both G_IO_OUT and G_IO_HUP simultaneously
	because in Unix poll(2) POLLOUT and POLLHUP are mutually
	exclusive.

	Ignore whether the caller wants to watch G_IO_HUP or not. Always
	select for FD_CLOSE because Unix poll(2) also ignores whether
	POLLHUP in set the requested events bitmask or not.
